# renfe_mcp_server

./: .gitignore  LICENSE  README.md  SECURITY_AUDIT.md  main.py  price_checker.py  pyproject.toml  schedule_searcher.py  test.ipynb  test_date_validation.py  test_http_security.py  test_logging.py  test_privacy_security.py  test_rate_limiting_rng.py  update_data.py
renfe_scraper/: dwr.py  scraper.py
src/renfe_mcp/: __init__.py  config.py  logging.py  price_checker.py  schedule_searcher.py  security.py  server.py  station_service.py  update_data.py
src/renfe_mcp/scraper/: __init__.py  dwr.py  exceptions.py  models.py  scraper.py
tests/: test_final_integration.py  test_http_security.py  test_logging.py  test_security.py  test_station_service.py  test_zip_security.py
