[project]
name = "renfe-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "fastmcp>=0.7.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.2",
    "requests>=2.31.0",
]
